VPC-Webtier.yml
---
AWSTemplateFormatVersion: 2010-09-09
Description: |-
  VPC, Route Table, Internet Gateway, Attaches Internet Gateway to the VPC you just created,
  2 Public Subnets, Scaling Policy for Public Subnets, Route Table for Public Subnets,
  Associate the Public Subnets to the Route Table, Security group with HTTP & SSH to open to 0.0.0.0/0,
  Launch Template with Bootstrap script to install & launch Apache, AutoScaling Group for Public Subnets,
  Scaling Policy, 4 Private Subnets — two in us-east1a & two in us-east1b,
  AutoScaling Group for two Private Subnets in the Application tier

Resources:
  # Creating the VPC
  cloudVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWS::StackName'
              - '-cloudVPC'

  # Route Table
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'cloudVPC'

   # Creating an internetGateway
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    DependsOn: cloudVPC

  # InternetGatewayAttachment to VPC
  InternetGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref 'cloudVPC'
      InternetGatewayId: !Ref InternetGateway

  # Create Public Subnet1a
  PublicSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'cloudVPC'
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: 10.0.0.0/20
      MapPublicIpOnLaunch: true

  # Create Public Subnet1b
  PublicSubnet1b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'cloudVPC'
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: 10.0.16.0/20
      MapPublicIpOnLaunch: true

  # Create Route Table
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'cloudVPC'

  # Create PublicRoute
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # Associate Public Subnet1a
  PublicSubnet1aRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1a

  # Associate Public Subnet1b
  PublicSubnet1bRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1b

  # Create Security Group
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: SecurityGroup-07
      GroupDescription: Open HTTP (port 80) and SSH (port 22)
      VpcId: !Ref 'cloudVPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  # Create Launch Template
  LaunchTemplate:
    Type: 'AWS::EC2::LaunchTemplate'
    Properties:
      LaunchTemplateName: !Sub '${AWS::StackName}-launchTemplate4ASG'
      LaunchTemplateData:
        NetworkInterfaces:
          - DeviceIndex: 0
            AssociatePublicIpAddress: true
            DeleteOnTermination: true
            Groups:
              - !Ref InstanceSecurityGroup
        ImageId: ami-0022f774911c1d690
        InstanceType: t2.micro
        UserData:
          Fn::Base64: |
          
            #!/bin/bash
            yum update -y
            yum install httpd -y
            systemctl start httpd
            systemctl enable httpd
            amazon-linux-extras install epel -y
            yum install stress -y
        #SecurityGroupIds:
        #  - !Ref InstanceSecurityGroup

  # Create AutoScaling Group
  AutoScalingGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
      MaxSize: '5'
      MinSize: '2'
      DesiredCapacity: '2'
      VPCZoneIdentifier:
        - !Ref PublicSubnet1a
        - !Ref PublicSubnet1b
      MetricsCollection:
        - Granularity: 1Minute

  # Create a Scaling Policy
  ScalingPolicy07:
    Type: 'AWS::AutoScaling::ScalingPolicy'
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref AutoScalingGroup
      ScalingAdjustment: '1'

  # Create Private Subnet1a
  PrivateSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'cloudVPC'
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: 10.0.32.0/20
      MapPublicIpOnLaunch: false

  # Create Private Subnet1b
  PrivateSubnet1b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'cloudVPC'
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: 10.0.48.0/20
      MapPublicIpOnLaunch: false

  # Create Private Subnetdb1a 
  PrivateSubnetdb1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'cloudVPC'
       AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: 10.0.64.0/20
      MapPublicIpOnLaunch: false

  # Create Private Subnetdb1b
  PrivateSubnetdb1b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'cloudVPC'
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: 10.0.80.0/20
      MapPublicIpOnLaunch: false

 # Create Private Route Table
  PrivateRouteTable1b:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'cloudVPC'

  # Create PrivateRoute
  PrivateRoute1b:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1b
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # Associate Private Subnet1a
  PrivateSubnet1aRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1b
      SubnetId: !Ref PrivateSubnet1a

  # Associate Private Subnet1b
  PrivateSubnet1bRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1b
      SubnetId: !Ref PrivateSubnet1b

  # Create AutoScaling Group
  AutoScalingGroup2:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
git 
    Type: 'AWS::AutoScaling::ScalingPolicy'
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref AutoScalingGroup
      ScalingAdjustment: '1'

  # Create Security Group
  InstanceSecurityGroup2:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: SecurityGroup-08
      GroupDescription: Open HTTP (port 80) and SSH (port 22)
      VpcId: !Ref 'cloudVPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
